--- a/styles.css
+++ b/styles.css
@@ -525,3 +525,26 @@ footer {
         max-width: 50%;
     }
 }
+/* Hamburger Menu */
+.hamburger {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    color: #fff;
+}
+
+/* Hide menu by default on mobile */
+#nav-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#nav-menu li {
+    margin: 10px 0;
+}
+
+#nav-menu.active {
+    display: flex;
+}
+
